k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-alerting-service
  namespace: api-alerting
spec:
  selector:
    app: api-alerting
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
