k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-alerting-ingress
  namespace: api-alerting
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: api-alerting
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-alerting-service
                port:
                  number: 80
